# Holocure-Optimization-Mod

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  build.sh
.github/: build.yml
.github/workflows/: build.yml
Optimization/: CMakeLists.txt  DllMain.cpp  Optimization.vcxproj
Optimization/SDK/Enums/: Enums.hpp
Optimization/SDK/Plugins/: Plugins.hpp
Optimization/SDK/Plugins/API Definitions/: APIDefs.cpp
